--- a/package.json
+++ b/package.json
@@ -12,24 +12,39 @@
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
+    "@react-native-community/netinfo": "11.4.1",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.10.1",
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/stack": "^7.6.16",
+    "@tanstack/react-query": "^5.90.20",
     "axios": "^1.13.4",
     "expo": "~54.0.32",
+    "expo-blur": "~15.0.8",
+    "expo-clipboard": "~8.0.8",
     "expo-font": "~14.0.11",
+    "expo-haptics": "~15.0.8",
     "expo-image-picker": "~17.0.10",
     "expo-linear-gradient": "~15.0.8",
+    "expo-media-library": "~18.2.1",
+    "expo-navigation-bar": "~5.0.10",
+    "expo-screen-capture": "~8.0.9",
+    "expo-sharing": "~14.0.8",
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
+    "expo-system-ui": "~6.0.9",
     "lodash": "^4.17.23",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-raw-bottom-sheet": "^3.0.0",
     "react-native-reanimated": "~4.1.1",
+    "react-native-remix-icon": "^4.7.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-vector-icons": "^10.3.0"
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-view-shot": "^4.0.3",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.23",
