--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-community/netinfo": "11.4.1",
     "@react-native-picker/picker": "2.11.1",
-    "@react-navigation/bottom-tabs": "^7.10.1",
+    "@react-navigation/bottom-tabs": "^7.12.0",
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/stack": "^7.6.16",
     "@tanstack/react-query": "^5.90.20",
@@ -26,8 +26,10 @@
     "expo-haptics": "~15.0.8",
     "expo-image-picker": "~17.0.10",
     "expo-linear-gradient": "~15.0.8",
+    "expo-location": "^19.0.8",
     "expo-media-library": "~18.2.1",
     "expo-navigation-bar": "~5.0.10",
+    "expo-notifications": "^0.32.16",
     "expo-screen-capture": "~8.0.9",
     "expo-sharing": "~14.0.8",
     "expo-splash-screen": "~31.0.13",
