--- a/app.json
+++ b/app.json
@@ -4,23 +4,48 @@
     "slug": "opueh-app",
     "version": "1.0.0",
     "orientation": "portrait",
-    "userInterfaceStyle": "light",
+    "icon": "./assets/icon.png",
+    "userInterfaceStyle": "dark",
+    "splash": {
+      "image": "./assets/splash-icon.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#000000"
+    },
     "assetBundlePatterns": [
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "com.opueh.app"
+      "supportsTablet": false,
+      "bundleIdentifier": "com.opueh.app",
+      "infoPlist": {
+        "NSLocationWhenInUseUsageDescription": "Opueh uses your location to show you nearby matches."
+      }
     },
     "android": {
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/adaptive-icon.png",
+        "backgroundColor": "#000000"
+      },
       "package": "com.opueh.app",
       "permissions": [
-        "android.permission.RECORD_AUDIO"
+        "android.permission.RECORD_AUDIO",
+        "android.permission.ACCESS_FINE_LOCATION",
+        "android.permission.ACCESS_COARSE_LOCATION"
       ]
     },
     "plugins": [
-      "expo-image-picker",
-      "expo-font"
+      ["expo-image-picker", {
+        "photosPermission": "Opueh needs photo library access to upload profile photos.",
+        "cameraPermission": "Opueh needs camera access for profile verification and photo uploads."
+      }],
+      "expo-font",
+      ["expo-location", {
+        "locationAlwaysAndWhenInUsePermission": "Opueh uses your location to show you nearby matches."
+      }],
+      ["expo-notifications", {
+        "icon": "./assets/icon.png",
+        "color": "#FF007B"
+      }]
     ],
     "extra": {
       "eas": {
