--- a/app.json
+++ b/app.json
@@ -14,6 +14,7 @@
     "assetBundlePatterns": [
       "**/*"
     ],
+    "scheme": "opueh",
     "ios": {
       "supportsTablet": false,
       "bundleIdentifier": "com.opueh.app",
@@ -27,6 +28,17 @@
         "backgroundColor": "#000000"
       },
       "package": "com.opueh.app",
+      "intentFilters": [
+        {
+          "action": "VIEW",
+          "autoVerify": true,
+          "data": [
+            { "scheme": "https", "host": "opueh.app", "pathPrefix": "/" },
+            { "scheme": "opueh" }
+          ],
+          "category": ["BROWSABLE", "DEFAULT"]
+        }
+      ],
       "permissions": [
         "android.permission.RECORD_AUDIO",
         "android.permission.ACCESS_FINE_LOCATION",
